octave3.2 (3.2.4-3) UNRELEASED; urgency=low

  * debian/control: Remove Rafael Laboissiere from Uploaders (closes: #571833,
    #571835)

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Sun, 28 Feb 2010 20:22:41 +0100

octave3.2 (3.2.4-2) unstable; urgency=low

  * New patch: filter_empty_vector; let filter() handle empty vectors (closes:
    #567975). Thanks to John Eaton for the patch

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Wed, 17 Feb 2010 20:58:54 +0100

octave3.2 (3.2.4-1) unstable; urgency=low

  * New upstream release 
  * debian/control: Build against new hdf5 version (closes: #567057)
  * Drop patch fix-lsode-in-octave3.2.diff, applied upstream

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Sun, 31 Jan 2010 17:57:10 +0100

octave3.2 (3.2.3-2) unstable; urgency=low

  * New patch: fix-lsode-in-octave3.2.diff, allows passing of implicit
    function  (closes: #550828). Thanks Jaroslav Hajek for the patch.
  * Build emacs support for emacs23 also (closes: #554611). 
  * Drop info-browser as alternative to info (closes: #543914). Octave uses
    some switches specific to info(1).

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Thu, 07 Jan 2010 09:23:35 +0100

octave3.0 (1:3.0.5-7) unstable; urgency=low
 
  * Merge changes from the 3.2 branch into the 3.0 upload:
    - Drop the arm-specific build-dependencies on gcc and g++ 4.1 
      (closes: #533803)
    - Pass explicit FLIBS to ./configure, to avoid a library path with an
      explicit compiler path in mkoctfile. This allows us to depend on gcc and
      friends without a version (closes: #543291). Consequently, drop
      the explicit dependencies from debian/in/control and debian/rules.

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Mon, 12 Oct 2009 20:15:16 +0200

octave3.2 (3.2.3-1) unstable; urgency=low

  * New upstream release
  * Change build-dependency on libreadline, as per
    http://lists.debian.org/debian-devel/2009/09/msg00562.html 
  * Dropped patches (applied upstream):