@@ -2,6 +2,9 @@ octave3.2 (3.2.4-3) UNRELEASED; urgency=low
 
   * debian/control: Remove Rafael Laboissiere from Uploaders (closes: #571833,
     #571835)
+  * debian/in/control: Compile without debug symbols on mips and mipsel
+    (closes: #570771). This means we ship with an almost empty -dbg package on
+    these architectures.
 
  -- Thomas Weber <thomas.weber.mail@gmail.com>  Sun, 28 Feb 2010 20:22:41 +0100
 
